fix: sign out use black list
